# NoEngine

./: CMakeLists.txt  readme.md
include/: Window.h  circle.h  key_input.h  mouse_input.h  shader.h  structs.h
shaders/: vertex.glsl
src/: main.cpp
src/input/: key_input.cpp  mouse_input.cpp
src/render/: Window.cpp
src/render/mesh/: circle.cpp
src/render/shader/: shader.cpp
